# MeshPrep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MeshPrep.sln  NOTICE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: action_registry.json  compatibility.json
data/thingi10k/: README.md
docs/: CODE_STYLE.md  DEVELOPMENT_TRACKER.md  FUNCTIONAL_DESCRIPTION.md  cli_reference.md  error_handling.md  extreme_fragmentation_guide.md  filter_actions.md  functional_spec.md  gui_spec.md  implementation_plan.md  learning_systems.md  model_profiles.md  packaging.md  repair_pipeline.md  repair_strategy_guide.md  thingi10k_testing.md  validation.md
docs/features/: FEATURE_01_FORMAT_IMPORT.md  FEATURE_02_FINGERPRINT.md  FEATURE_03_MESH_ANALYSIS.md  FEATURE_04_ML_LEARNING.md  FEATURE_05_FILTER_APPLICATION.md  FEATURE_06_SLICER_VALIDATION.md  FEATURE_07_VISUAL_COMPARISON.md  FEATURE_08_STL_EXPORT.md  FEATURE_09_SCRIPT_SHARING.md  FEATURE_10_BATCH_PROCESSING.md  FEATURE_11_3D_PREVIEW.md  FEATURE_12_USER_FEEDBACK.md  FEATURE_13_SCALING_UNITS.md  FEATURE_14_ORIENTATION.md  FEATURE_15_MULTI_PART.md  FEATURE_16_UNDO_REDO.md  FEATURE_INDEX.md  _FEATURE_TEMPLATE.md
docs/poc/: POC_01_FORMAT_IMPORT.md  POC_02_FINGERPRINT.md  POC_03_SLICER_INTEGRATION.md  POC_04_3D_PREVIEW.md  POC_05_MESH_REPAIR.md  POC_06_GEOMETRY_COMPARISON.md  POC_07_RL_PIPELINE.md  POC_INDEX.md  _POC_TEMPLATE.md
filters/: README.md
filters/community/: README.md
gui/: README.md
learning_data/: adaptive_thresholds.db  learning_detailed_log.db  meshprep_learning.db  pipeline_evolution.db  profile_discovery.db  quality_feedback.db
learning_data_old/: adaptive_thresholds.db  learning_detailed_log.db  meshprep_learning.db  profile_discovery.db
poc/v1/: README.md  requirements.txt  run_cli.py  run_gui.py
poc/v2/: README.md  (+15 more)
scripts/: checkenv.py  manage_fixtures.py  setup_thingi10k.py
tests/: __init__.py
(+434 files in other folders)
